# BpodProtocols

./: .gitignore  CombinedStimOdorTask.m  CombinedStimOdorTaskSine.m  CombinedTwoPairOdorTask.m  FixedOrder.m  OdorWaterTrialVisualizer.m  OdorWater_VariableDelay_FreeRewards.m  spikedata.ipynb
OdorWater_VariableDelay_FreeRewards/: OdorWater_VariableDelay_FreeRewards.m
lickdetection/: add_motion_energy.py  generate_figures.py  lickdetection_raster.py  lickdetector.py  lickrate.py  main.py  pyproject.toml  sync_data.py  test.py  trimvideo.py
model/: pyproject.toml  test.py
